# qrcode

QRcode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  qrcode  qrcode.cpp  qrcode1.cpp
